# tmb-ai-os

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.production  LICENSE  Makefile  README.md  README_MILESTONE_2.md  README_MILESTONE_3_1.md  README_MILESTONE_4.md  README_MILESTONE_4_1.md  README_MILESTONE_4_2.md  README_MILESTONE_4_3.md  README_MILESTONE_4_4.md  README_MILESTONE_4_5.md  README_MILESTONE_4_6.md  README_MILESTONE_4_7.md  README_MILESTONE_4_8.md  README_MILESTONE_4_9.md  README_MILESTONE_5_0.md  README_MILESTONE_5_1.md  README_MILESTONE_5_2.md  README_MILESTONE_5_3.md  README_MILESTONE_5_4.md  README_MILESTONE_5_5.md  README_MILESTONE_5_6.md  README_MILESTONE_5_7.md  README_MILESTONE_5_8.md  README_MILESTONE_5_9.md  README_MILESTONE_6_0.md  README_MILESTONE_6_1.md  README_MILESTONE_6_2.md  README_MILESTONE_6_3.md  README_MILESTONE_6_4.md  README_MILESTONE_6_5.md  (+8 more)
.github/: CODEOWNERS  milestone-6.6-trigger.txt  pull_request_template.md
alembic/: env.py  script.py.mako
app/: main.py
data/: tmb_ai_os.db
docs/: MILESTONE_1.md
reports/: legacy-dependencies.json
scripts/: apply_milestone_2.py  apply_milestone_3_1.py  apply_milestone_4.py  apply_milestone_4_2.py  apply_milestone_4_2_all.py  apply_milestone_4_4.py  apply_milestone_4_4_all.py  apply_milestone_4_5.py  apply_milestone_4_6.py  apply_milestone_4_7.py  apply_milestone_4_8.py  apply_milestone_4_9.py  apply_milestone_5_0.py  apply_milestone_5_1.py  apply_milestone_5_2.py  apply_milestone_5_3.py  apply_milestone_5_4.py  apply_milestone_5_5.py  apply_milestone_5_6.py  apply_milestone_5_7.py  apply_milestone_5_8.py  apply_milestone_5_9.py  apply_milestone_6_0.py  bootstrap.sh  (+34 more)
(+323 files in other folders)
