[project]
name = "tmb-ai-os"
version = "0.1.0"
description = "Content-first AI operating system for Thai Modern Bags"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-frontmatter>=1.1,<2",
  "google-genai>=1.0,<2",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "httpx>=0.28,<1",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
]

[project.scripts]
tmb-ai = "tmb_ai_os.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tmb_ai_os"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=tmb_ai_os --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["tmb_ai_os"]
